fixed team cards issue on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1403,11 +1403,11 @@ color: var(--contrast-color);
   background-color: var(--surface-color);
   color: color-mix(in srgb, var(--default-color), transparent 20%);
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  position: absolute;
+  /* position: absolute;
   bottom: -50px;
   left: 20px;
-  right: 20px;
-  padding: 20px 15px;
+  right: 20px; */
+  padding: 40px 25px;
   overflow: hidden;
   transition: 0.5s;
 }
